--- a/130665/ind.html
+++ b/130665/ind.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My frist Page</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="img/tatc.gif" type="image/x-icon">
 </head>
 <body>
-    
+    <nav></nav>
+    <header> </header>
+    <aside> </aside>
+    <article> </article>
+    <section> </section>
+    <footer> </footer>
+
 </body>
 </html>
